
[metadata]
name = saber
version = 1.0
author = Ayan Ambesh
author_email = ambesh12k@email.com
description = An antivirus which you can run with your yara rules or hashlist
long_description = file: README.md
long_description_content_type = text/markdown
url = yourprojecturl.com
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt

# [options]
# packages = find:
# pa

# [options.packages.find]
# include = saber





[options]
packages = find_namespace:
include_package_data = True
package_dir =
    =src
install_requires=
    yara;python_version>="3.8"
[options.packages.find]
where = src